--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 网站名称 -->
-    <title>逆行时光-Demo站</title>
+    <title>Demo</title>
     <!-- 标题图标 -->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!-- 引入主css文件 -->
